<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="button_popular_movies">POPULAR MOVIES</string>
    <string name="button_scores">SCORES APP</string>
    <string name="button_library">LIBRARY APP</string>
    <string name="button_build">BUILD IT BIGGER</string>
    <string name="button_reader">XYZ READER</string>
    <string name="button_capstone">CAPSTONE: MY OWN APP</string>

    <string name="toast_format">This button will launch my %1$s app!</string>
    <string name="toast_popular_movies">Popular Movies</string>
    <string name="toast_scores">Scores</string>
    <string name="toast_library">Library</string>
    <string name="toast_build">Build</string>
    <string name="toast_reader">Reader</string>
    <string name="toast_capstone">Capstone</string>

    <string name="pkg.popular_movies">ca.jacobk.popularmovies</string>
</resources>
