<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:typeface="monospace" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_popular_movies"
        android:id="@+id/button"
        android:layout_marginTop="41dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="55dp"
        android:paddingRight="55dp"
        android:clickable="true"
        android:enabled="true"
        android:onClick="buttonPopularMoviesOnClick"
        android:backgroundTint="@color/udacity_orange"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scores"
        android:id="@+id/button2"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:clickable="true"
        android:enabled="true"
        android:onClick="buttonScoresOnClick"
        android:backgroundTint="@color/udacity_orange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_library"
        android:id="@+id/button3"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:clickable="true"
        android:enabled="true"
        android:onClick="buttonLibraryOnClick"
        android:backgroundTint="@color/udacity_orange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_build"
        android:id="@+id/button4"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:clickable="true"
        android:enabled="true"
        android:onClick="buttonBuildOnClick"
        android:backgroundTint="@color/udacity_orange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reader"
        android:id="@+id/button5"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:clickable="true"
        android:enabled="true"
        android:onClick="buttonReaderOnClick"
        android:backgroundTint="@color/udacity_orange" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone"
        android:id="@+id/button6"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_below="@+id/button5"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:clickable="true"
        android:enabled="true"
        android:maxLines="1"
        android:onClick="buttonCapstoneOnClick"
        android:textColor="@color/material_grey_100"
        android:backgroundTint="@color/capstone_red" />

</RelativeLayout>
